--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "message",
   "version": "1.0.0",
   "description": "message chatting website",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:migrate": "node_modules/.bin/sequelize db:migrate",
+    "model:generate": "node_modules/.bin/sequelize model:generate --name Friend --attributes user_id:integer,friend_id:integer,channel_hash:string",
     "db:create": "node_modules/.bin/sequelize db:create",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.1",
-    "bcrypt": "^3.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.6.1",
@@ -30,6 +31,7 @@
     "node-cmd": "^3.0.0",
     "nodemon": "^1.18.9",
     "pry": "^0.8.7",
+    "pryjs": "^1.0.3",
     "sequelize": "^4.42.0",
     "socket.io": "^2.2.0"
   },
