--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "model:generate": "node_modules/.bin/sequelize model:generate --name Friend --attributes user_id:integer,friend_id:integer,channel_hash:string",
     "post":"node_modules/.bin/sequelize model:generate --name Post --attributes user_id:integer,content:string,privacy:integer",
     "comments":"node_modules/.bin/sequelize model:generate --name Comment --attributes user_id:integer,content:string,post_id:integer",
-    "likes":"post":"node_modules/.bin/sequelize model:generate --name Like --attributes user_id:integer,type:string,parent_id:integer",
+    "likes":"node_modules/.bin/sequelize model:generate --name Like --attributes user_id:integer,type:string,parent_id:integer",
     "db:create": "node_modules/.bin/sequelize db:create",
     "start": "node server.js"
   },
